RESOLVED FIXED211740
Fixes for crashes in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=211740
Summary Fixes for crashes in isolated tree mode.
Andres Gonzalez
Reported 2020-05-11 13:05:53 PDT
Fixes for crashes in isolated tree mode.
Attachments
Patch (4.92 KB, patch)
2020-05-11 13:09 PDT, Andres Gonzalez
no flags
Patch (4.98 KB, patch)
2020-05-11 17:45 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-05-11 13:09:25 PDT
EWS
Comment 2 2020-05-11 15:14:45 PDT
Found 1 new test failure: accessibility/mac/setting-attributes-is-asynchronous.html
Andres Gonzalez
Comment 3 2020-05-11 17:45:52 PDT
EWS
Comment 4 2020-05-11 18:28:44 PDT
Committed r261536: <https://trac.webkit.org/changeset/261536> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399077 [details].
Radar WebKit Bug Importer
Comment 5 2020-05-11 18:29:14 PDT
Note You need to log in before you can comment on or make changes to this bug.