Fixes for crashes in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=211740

Reviewed by Chris Fleizach.

Fixes for several LayoutTests in isolated tree mode.

* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase attachIsolatedObject:]):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper characterOffsetForTextMarker:]):
(-[WebAccessibilityObjectWrapper textMarkerForVisiblePosition:]):
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):
(-[WebAccessibilityObjectWrapper accessibilitySetValue:forAttribute:]):
(-[WebAccessibilityObjectWrapper _accessibilitySetValue:forAttribute:]):


Canonical link: https://commits.webkit.org/224654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261536 268f45cc-cd09-0410-ab3c-d52691b4dbfc